# FluMut

./: .gitignore  README.md  environment.yml  pyproject.toml  setup.cfg
.github/workflows/: create-release-and-deploy.yml  create-release.yml  create_new_release.yml  deploy-pages.yml  jekyll-gh-pages.yml  publish-to-pypi.yml  python-publish.yml
docs/: Gemfile  _config.yml  index.md
docs/.github/scripts/: create_markers_markdown.py
docs/_includes/: datatables.html
docs/docs/: aknowledgements.md  contribute.md  installation.md  markers.md  output.md
docs/docs/usage/: index.md  input_file_specs.md  usage_cli.md  usage_gui.md
examples/: multiple_samples.fa  multiple_samples_HA.fa  single_sample.fa
src/: DataClass.py  DbReader.py  MutFinder.py  OutputFormatter.py  OutputWriter.py
src/FluMut/: DbReader.py  FluMut.py  OutputFormatter.py
src/FluMutData/: flumut_db.sqlite
src/MutFinder/: DataClass.py  DbReader.py  MutFinder.py  OutputFormatter.py  OutputWriter.py
src/MutFinderData/: mutfinder_output.xlsm  mutfinder_output.xlsx
src/data/: annotations.tsv  markers.tsv  mutfinderDB.sqlite  mutfinder_output.xlsm  mutfinder_output.xlsx  papers.tsv  references.fa
src/flumut/: DbReader.py  Exceptions.py  Fasta.py  FluMut.py  OutputFormatter.py  Updater.py  __init__.py  analysis.py  cli.py  exceptions.py  flumut.py  logger.py  output.py
src/flumut/Core/: DBData.py  DBReader.py
src/flumut/Core/Models/: DataModels.py
src/flumut/Core/Reader/: __init__.py
src/flumut/Core/Reader/DB/: DBLoader.py  DBReader.py
src/flumut/data/: flumut_output.xlsm
src/flumut/db_utility/: db_connection.py  db_data.py  db_models.py  db_update.py  exceptions.py
src/flumut/sequence_utility/: aligner.py  exceptions.py  fasta_handler.py  models.py  parser.py  translator.py
src/flumutdata/: flumut_output.xlsm
tests/: test_name_parser.py  test_position.py  test_seq.fa  test_translation.py
