[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "flumut"
description = "A tool to search for molecular markers with potential impact on the biological characteristics of Influenza A viruses of the A(H5N1) subtype."
authors = [
    {name = "Edoardo Giussani", email = "egiussani@izsvenezie.it"},
    {name = "Alessandro Sartori", email = "asartori@izsvenezie.it"},
]
keywords = [ "flumut", "molecular markers", "Influenza A Virus", "AIV"]
dynamic = ["version"]

requires-python = ">=3.7"
dependencies = [
    "click >=8.0.0",
    "flumutdb >=6.0",
    "biopython >=1.81",
    "openpyxl >= 3.1.2",
    "importlib-resources >= 1.3",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
file = "LICENSE"
content-type = "text/plain"

[project.urls]
"Homepage" = "https://izsvenezie-virology.github.io/FluMut"
"Bug Reports" = "https://github.com/izsvenezie-virology/FluMut/issues"
"Source" = "https://github.com/izsvenezie-virology/FluMut"

[project.scripts]
flumut = "flumut.cli:cli"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.setuptools.dynamic]
version = {attr = "flumut.__version__"}
