[metadata]
name = MutFinder
version = 0.0.0
author = egiussani
author_email = egiussani@izsvenezie.it
description = A tool to easly find mutations of interest in influenza viruses.
long_description = file: README.md
long_description_content_type = text/markdown
url = not_yet_implemented

classifiers =
programming language :: Python :: 3
operating system :: OS Independent

[options]
package_dir = src
packages = find_namespace:
python_requires = >=3.6
[options.packages.find]
where = src
