[metadata]
name = MutFinder
version = 0.1.2
author = egiussani
author_email = egiussani@izsvenezie.it
description = A tool to easly find mutations of interest in influenza viruses.
long_description = file: README.md
long_description_content_type = text/markdown
url = not_yet_implemented

classifiers =
programming language :: Python :: 3
operating system :: OS Independent

[options]
package_dir = 
    = src
include_package_data = True
packages = find_namespace:
python_requires = >=3.6
install_requires =
    click >=8.0.0
    biopython >=1.81
entry_points=
    [console_scripts]
    mutfinder = MutFinder.MutFinder:main

[options.packages.find]
where = src

[options.package_data]
data =
    *
